Add links to navigate to recipe pages

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <p><a href="./recipes/whole_chicken_instant_pot.html">Whole Chicken - Instant Pot</a></p>
+    <p><a href="./recipes/egg_fried_rice.html">Egg Fried Rice</a></p>
+    <p><a href="./recipes/macaroni_cheese.html">Macaroni and Cheese</a></p>
 </body>
 </html>
