--- a/recipes/egg_fried_rice.html
+++ b/recipes/egg_fried_rice.html
@@ -6,6 +6,7 @@
     <title>Egg Fried Rice</title>
 </head>
 <body>
+    <p><a href="../index.html">Home</a></p>
     <h1>Egg Fried Rice</h1>
     <img 
         src="../images/egg-fried-rice.jpeg" 
