--- a/recipes/macaroni_cheese.html
+++ b/recipes/macaroni_cheese.html
@@ -6,6 +6,7 @@
     <title>Macaroni and Cheese</title>
 </head>
 <body>
+    <p><a href="../index.html">Home</a></p>
     <h1>Macaroni and Cheese</h1>
     <img 
         src="../images/macaroni-and-cheese.jpeg" 
