--- a/recipes/whole_chicken_instant_pot.html
+++ b/recipes/whole_chicken_instant_pot.html
@@ -6,6 +6,7 @@
     <title>Whole Chicken Instant Pot</title>
 </head>
 <body>
+    <p><a href="../index.html">Home</a></p>
     <h1>Whole Chicken Instant Pot</h1>
     <img 
         src="../images/Instant-Pot-Chicken.jpeg" 
